@@ -1,5 +1,9 @@
 2008-04-02  Vivien Malerba <malerba@gnome-db.org>
 
+	* libgda/gda-set.c: fixed a double free problem, for bug #525601
+
+2008-04-02  Vivien Malerba <malerba@gnome-db.org>
+
 	* libgda/sqlite/gda-sqlite-provider.c: corrected mem leak (thanks to Phil Longstaff)
 	* libgda/gda-connection.c: corrected a mis-usage of variable number of arguments in
 	gda_connection_get_meta_store_data(), possibly fixes bug #524837
